home/mealie/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  labels:
    app: mealie
spec:
  selector:
    app: mealie
  ports:
    - port: 9000
      targetPort: web
      name: web
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  labels:
    app: mealie
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
    spec:
      automountServiceAccountToken: false
      restartPolicy: Always
      containers:
        - name: mealie
          image: hkotel/mealie:v2.5.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
              protocol: TCP
              name: web
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
              ephemeral-storage: 128Mi
            limits:
              cpu: 500m
              memory: 1Gi
              ephemeral-storage: 256Mi
          volumeMounts:
            - mountPath: /app/data/
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-data
