home/mealie/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Get Homepage configuration
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Recipes
    gethomepage.dev/group: Home
    gethomepage.dev/icon: jellyfin.png
    gethomepage.dev/name: Mealie
    gethomepage.dev/widget.type: "mealie"
    gethomepage.dev/widget.url: "http://mealie:9000"
    gethomepage.dev/widget.key: "<homepage-mealie-key>"
    gethomepage.dev/widget.version: "2"
  name: mealie
spec:
  ingressClassName: nginx
  rules:
    - host: mealie.<homelab-domain>
      http:
        paths:
          - path: /
            backend:
              service:
                name: mealie
                port:
                  name: web
            pathType: Prefix
  tls:
    - hosts:
        - mealie.<homelab-domain>
      secretName: "mealie.<homelab-domain>-cert"
